--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,38 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-nav{
+
+nav {
     width: 100%;
     height: 50px;
-    border: 1px solid red;
     background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-nav ul{
+nav .navbar {
     display: flex;
     list-style: none;
-    justify-content:space-evenly;
+    justify-content:space-around;
+    width: 500px;
 }
 
-nav ul li{
+nav .navbar li {
     color: #fff;
 }
+nav .navbar li a{
+    color: #fff;
+    text-decoration: none;
+}
+nav .navbar li a.active{
+    color: rgb(255, 0, 0);
+}
 
-.container{
+.container {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -30,14 +41,14 @@ nav ul li{
     align-items: center;
 }
 
-input{
+input {
     width: 300px;
     padding: 10px;
     font-size: 19px;
     margin-top: 25px;
 }
 
-button{
+.qrBtn {
     width: 300px;
     background-color: #000;
     color: #fff;
@@ -46,3 +57,28 @@ button{
     margin-bottom: 10px;
     cursor: pointer;
 }
+
+.howToUse_Container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+ol{
+    font-size: 16pt;
+}
+
+ol li{
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+.aboutDeveloper_Container{
+    display: flex;
+    justify-content: center;
+}
+.aboutDeveloper_Container p{
+    max-width: 500px;
+    line-height: 1.5;
+}
+
